# delivery

./: .cursorrules  .gitignore  ARDUINO_SETUP_GUIDE.md  GAZEBO_SETUP.md  QUICK_REFERENCE.md  README.md  ROBOT_MOVEMENT_GUIDE.md  arduino_motor_controller.ino  deploy_robot.sh  gazebo_launch.sh  robot_teleop.py
src/: README.md  ardruino
src/ai_bridge_pkg/: README.md  package.xml  setup.cfg  setup.py
src/ai_dialog_pkg/: README.md  package.xml  setup.cfg  setup.py
src/audio_input_pkg/: README.md  package.xml  setup.cfg  setup.py
src/esp32_camera_pkg/: README.md  package.xml  setup.cfg  setup.py
src/face_detection_pkg/: README.md  package.xml  setup.py
src/face_tracking_pkg/: README.md  package.xml  setup.py
src/intent_classifier_pkg/: README.md  package.xml  setup.cfg  setup.py
src/mission_manager_pkg/: README.md  package.xml  setup.py
src/robot_bringup_pkg/: README.md  package.xml  setup.py
src/robot_camera_pkg/: README.md  package.xml  setup.cfg  setup.py
src/robot_description_pkg/: CMakeLists.txt  README.md  package.xml
src/robot_description_pkg/backup/20260517_092755/gazebo/: gazebo_plugins.xacro
src/robot_description_pkg/backup/20260517_092755/launch/: gazebo_bringup.launch.py  view_robot.launch.py
src/robot_description_pkg/backup/20260517_092755/meshes/: caster.stl  head.stl  shelf.stl  wheel.stl
src/robot_description_pkg/backup/20260517_092755/urdf/: base.xacro  base1.xacro  materials.xacro  sensors.xacro  wheels.xacro
src/robot_description_pkg/config/: robot_view.rviz
src/robot_description_pkg/meshes/: body_column.stl  camera.stl  chassis.stl  lidar_puck.stl
src/robot_description_pkg/scripts/: generate_meshes.py
src/robot_description_pkg/urdf/: inertia_macros.xacro  main.py  robot.urdf.xacro  sensors.xacro  wheels.xacro
src/robot_hardware_pkg/: README.md  hardware_interface_node.py  mock_arduino.py  package.xml  setup.cfg  setup.py
src/robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/msg/: AIRequest.msg  AIResponse.msg  FaceTarget.msg  Intent.msg  SessionState.msg  SpeechText.msg
src/robot_lidar_pkg/: README.md  package.xml  setup.cfg  setup.py
src/robot_navigation_pkg/: README.md  package.xml  setup.py
src/robot_slam_pkg/: README.md  (+2 more)
src/safety_supervisor_pkg/: README.md  package.xml  setup.cfg  setup.py
src/safety_supervisor_pkg/config/: safety_config.yaml
src/safety_supervisor_pkg/launch/: safety_bringup.launch.py
src/safety_supervisor_pkg/safety_supervisor_pkg/: hardware_watchdog_node.py  safety_logger_node.py  safety_supervisor_node.py
(+59 files in other folders)
